Fix loading and saving in various formats on Windows:

- Use KUrl::toLocalFile() instead of KUrl::path() when accessing local files. They happen to be the same on Linux, but not on Windows.
- Provide data to the jpeg library using source and destination managers, rather than passing in FILE pointers. This is not possible on Windows.

BUG: 209652

svn path=/trunk/koffice/; revision=1046501