krita/plugins/formats/jpeg/kis_jpeg_destination.h
@@ -1,0 +1,32 @@
+/*
+ *  Copyright (c) 2009 Adrian Page <adrian@pagenet.plus.com>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin Street, Fifth Floor,
+ * Boston, MA 02110-1301, USA.
+ */
+#ifndef _KIS_JPEG_DESTINATION_H_
+#define _KIS_JPEG_DESTINATION_H_
+
+#include <stdio.h>
+#include <jpeglib.h>
+
+class QIODevice;
+
+namespace KisJPEGDestination
+{
+    void setDestination(j_compress_ptr cinfo, QIODevice* destinationDevice);
+}
+
+#endif
